# subtitles-creator-android

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts  setup.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/subtitlecreator/: MainActivity.kt  SubtitleCreatorApp.kt
app/src/main/java/com/subtitlecreator/jni/: WhisperLib.kt
app/src/main/java/com/subtitlecreator/model/: Subtitle.kt
app/src/main/java/com/subtitlecreator/service/: FFmpegService.kt  ModelDownloadService.kt  PipelineService.kt  PipelineStore.kt  SubtitleBurner.kt  WhisperService.kt
app/src/main/java/com/subtitlecreator/ui/: AppViewModel.kt
app/src/main/java/com/subtitlecreator/ui/components/: KeepScreenOn.kt
app/src/main/java/com/subtitlecreator/ui/screens/: EditorScreen.kt  ExportScreen.kt  HomeScreen.kt  TranscribingScreen.kt
app/src/main/java/com/subtitlecreator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/subtitlecreator/util/: FileUtils.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
gradle/: libs.versions.toml
